; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/mail/extr_cmd3.c_Respond.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/mail/extr_cmd3.c_Respond.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"Replyall\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"flipr\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Respond(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = call i32* @value(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %5 = icmp eq i32* %4, null
  br i1 %5, label %6, label %12

6:                                                ; preds = %1
  %7 = call i32* @value(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %6
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @doRespond(i32* %10)
  store i32 %11, i32* %2, align 4
  br label %15

12:                                               ; preds = %6, %1
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @dorespond(i32* %13)
  store i32 %14, i32* %2, align 4
  br label %15

15:                                               ; preds = %12, %9
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32* @value(i8*) #1

declare dso_local i32 @doRespond(i32*) #1

declare dso_local i32 @dorespond(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
